# fastapi-paginator

./: README.md  main.py  pyproject.toml
fastapi_paginator/: helpers.py  main.py  middlewares.py  models.py  schemas.py
