[tool.poetry]
name = "fastapi-paginator"
version = "0.1.0"
description = "Implement some pagination patterns for FastAPI"
authors = ["Kevin Tewouda <lewoudar@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_paginator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
alchemical = "^0.6.0"
fastapi-pagination = "^0.11.4"
aiosqlite = "^0.18.0"
cryptography = "^39.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
